# scientific-contribution-graph

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: README.md  demo.py  demo_config.json  requirements.txt
examples/: README.md  backward_crawl_example_results.graphviz.dot  backward_crawl_example_results.graphviz.edgelabels.dot  backward_crawl_example_results.json  example2_output_plain_text_paper_claims.txt  example2a_paper_contributions.json  example3a_specific_contribution.json  example6_impact_metric.json  example7_search_results.json  example_graph_use.py  forward_crawl_example_results.graphviz.dot  forward_crawl_example_results.graphviz.edgelabels.dot  forward_crawl_example_results.json
src/scicontgraph/: ScientificContributionGraph.py  ScientificContributionGraphVisualization.py  __init__.py
src/scicontgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_precursor_prediction/: ExtractionUtils.py  README.md  precursor_prediction_example.py  precursor_prediction_example_output.json  precursor_prediction_example_output.txt  task_precursor_prediction_generation.py  task_precursor_prediction_model.py
