[project]
name = "scicontgraph"
version = "1.0.0"
description = "Scientific Contribution Graph API"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "orjson==3.11.3",
    "psutil>=6.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "torch>=2.6.0",
    "tqdm==4.67.1",
    "transformers>=5.8.0,<6.0.0",
    "huggingface-hub>=1.14.0,<2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"